# embedx

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: CNAME  advanced.md  architecture.md  commands.md  getting-started.md  index.md
docs/stylesheets/: extra.css
embedx/: cli.py  registry_boards.json  registry_libs.json  virsion.py
embedx/commands/: board.py  build.py  clean.py  device.py  doctor.py  init.py  lib.py  monitor.py  ports.py  run.py  setup.py  upload.py
embedx/core/: board.py  builder.py  constants.py  installer.py  lib_manager.py  monitor.py  registry.py  ui.py  uploader.py  utils.py
